@@ -395,3 +395,4 @@ Code:
 
 1.2.1
 * Unix: configure.in changes to better find OpenGL libraries by Bruckner
+* Added accurate orbital calculations for Galilean satellites.
